--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,168 +1,147 @@
 body {
+    box-sizing: border-box;
     background-color: rgb(22, 22, 22);
     margin: 0;
     padding: 0;
 }
 
-.backT {
-    height: 178.1%;
-    width: 100%;
-    visibility: hidden;
+.allLogo {
     position: absolute;
-    z-index: 1;
-    transition: background-color 1000ms linear;
+    display: flex;
+    float: right;
+    flex-direction:row;
+    /* margin-right: 45px; */
+    margin-top: 40px;
+    margin-bottom: 50px;
+    margin-left: 72em;
 }
 
-a {
-    z-index: 3;
-}
-
-.logoR {
-    position:absolute;
-    margin-left: 73em;
-    margin-top: 15px;
-}
 
 .LG {
     height: 41px;
-    margin-bottom: 3px;
+    margin-top: 3px;
     margin-left: 7px;
-}
+} 
 
 .textProjet {
-    position: absolute;
-    margin-left: 7em;
-    margin-top: 80px;
     font-family:fantasy;
-    font-size: 3em;
+    font-size: 3.5em;
     color: rgb(99, 99, 98);
 }
 
-.introText {
-    position: absolute;
-    color: black;
-    font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    font-size: 8em;
-    margin-left: 400px;
-}
-
-#redim {
-    position: absolute;
-    margin-left: 15px;
+.textIntro {
+    font-size: 2.5em;
+    font-family: fantasy;
+    color: rgb(111, 104, 104);
 }
 
 .container {
-    position: absolute;
-    display: flex;
-    flex-wrap: wrap;
-    background-color: rgba(0, 0, 0, 0.1);
-    /* height: 44em;  */
-    height: 25em;
-    width: 60em;
-    margin-left: 335px;
-    margin-top: 222px;
-    margin-bottom: 15px;
-    border-radius: 3px;
+   display: flex;
+   flex-direction: column;
+   margin-left: 250px;
+   margin-top: -500px;
 }
 
 .container2 {
-    position: absolute;
-    margin-left: 335px;
-    margin-top: 650px;
-    height: 31.5em;
-    width: 37em;
+    display: flex;
+    justify-content:center;
+    flex-direction: row;
+    background-color: black;
 }
 
-h3 {
-    font-size: 1.5em;
-}
+/* .blockC {
+    display: flex;
+    justify-content: center;
+} */
 
 .textFront {
     margin-left: 50px;
     color: rgb(69, 69, 68);
-    text-decoration: underline;
+    font-family: 'Jost', sans-serif;;
 }
 
 .textBack {
     margin-left: 50px;
     color: rgb(69, 69, 68);
-    text-decoration: underline;
+    font-family: 'Jost', sans-serif;
 }
+
+
+.titreSp {
+    font-family: 'Jost', sans-serif;
+}
+
+
+.eP {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    background-color: rgb(26, 26, 26);
+    margin-top: 90px;
+    font-size: 1.2em;
+}
+
+.cardProject {
+    display: flex;
+    flex-direction: row;
+}
+
+.carre2 {
+    margin-left: 90px;
+}
+
+
+
+h3 {
+    font-size: 1.5em;
+}
+
 
 .styleList {
     font-size: 1em;
     font-style: italic;
-    font-family: fantasy;
+    font-family: 'Jost', sans-serif;
     color: rgb(99, 99, 98);
 }
 
 .projet1 {
-    position: relative;
     height: 15em;
     width: 25em;
-    margin-top: 80px;
-    margin-left: 50px;
+    margin-top: 30px;
 }
 
 .projet2 {
-    position: relative;
     height: 14.9em;
     width: 25em;
-    margin-top: 80px;
-    margin-left: 55px;
-}
-
-.projet3 {
-    position: relative;
-    height: 15em;
-    width: 25em;
-    margin-left: 12.5%;
-}
-.projet4 {
-    position: relative;
-    height: 15em;
-    width: 25em;
-    margin-left: 105px;
-}
-
-section:hover {
-    background-color: rgba(0, 0, 0, 0.1);
-}
-
-.allId {
-    position: relative;
-    z-index: 3;
-    display: flex;
-    overflow: hidden;
-    flex-direction: column;
-    background-color: rgb(29, 28, 28);
-    padding-left: 50px;
-    width: 220px;
-    box-shadow: 2px 2px 20px 1px;
-    transition: 0.4s;
-}
-
-.allId:hover {
-    width: 70%;
-    transform: scale(0.8);
+    /* margin-left: 35px; */
+    margin-top: 30px;
 }
 
 
-/* ligne et style titre */
 .topInfo img {
     clip-path: ellipse(50% 40%);
     height: 150px;
-    margin-top: 2em;
-    margin-bottom: -20px;
     margin-left: 20px;
+    margin-top: 45px;
 }
+
+
 
 .nomPrenom {
     font-family: fantasy;
     font-size: 2em;
     color: rgb(194, 183, 183);
     margin-top: 50px;
+    margin-left: 20px;
 }
+
+.ageAbas {
+    font-family: fantasy;
+    font-size: 2em;
+    color: rgb(194, 183, 183);
+    margin-left: 20px;
+}
+
 
 a {
     color: rgb(165, 187, 187);
@@ -170,46 +149,19 @@ a {
 }
 
 .devWeb {
+    margin-left: 20px;
     font-family: fantasy;
     font-size: 20px;
     color: rgb(194, 183, 183);
     margin-bottom: 40px;
 }
 
-.barreG {
-    border: 1px solid;
-    width: 50px;
-    margin-bottom: 1.5px;
-    color: white;
-}
-
-.propos {
-    margin-top: -15px;
-    margin-left: 60px;
+.mail {
     font-family: fantasy;
-    color: white;
-}
-
-.barreD {
-    border: 1px solid;
-    width: 50px;
-    margin-left: 125px;
-    margin-top: -25.5px;
-    color: white;
-}
-
-.barreG2 {
-    border: 1px solid;
-    width: 50px;
-    color: white;
-}
-
-.barreD2 {
-    border: 1px solid;
-    width: 50px;
-    margin-left: 105px;
-    margin-top: -25px;
-    color: white;
+    font-size: 1em;
+    color: rgb(194, 183, 183);
+    margin-left: 20px;
+    text-decoration: underline;
 }
 
 .langue {
@@ -237,31 +189,6 @@ a {
     margin-bottom: 30px;
 }
 
-.english {
-    margin-top: 38px;
-    font-size: 18px;
-    font-family: fantasy;
-    color: rgb(194, 183, 183);
-}
-
-.english p {
-    margin-bottom: 30px;
-}
-
-.adaptabilite p {
-    margin-top: 38px;
-    font-size: 18px;
-    font-family: fantasy;
-    color: rgb(194, 183, 183);
-}
-
-.centreInterer {
-    margin-top: -11px;
-    margin-left: 60px;
-    font-family: fantasy;
-    color: white;
-}
-
 .centre p {
     margin-top: 38px;
     font-size: 18px;
@@ -272,52 +199,337 @@ a {
 
 /* partie de compétence et diplome */
 
-.competence {
-    background-color: rgb(111, 104, 104);
-    margin-left: 240px;
-    height: 173.8%;
-    width: 68em;
-    box-shadow: 2px 2px 6px 2px;
-}
-
 .barreV {
-    position: absolute;
+    /* position: absolute; */
     border-left: 1px solid;
     height: 100%;
     margin-left: 240px;
 }
 
-.textcv {
+.barreSuite {
     position: absolute;
-    margin-right: 12px;
-    margin-top: 40px;
-    margin-left: 300px;
-    font-size: 0.9em;
+    border-left: 1.5px solid;
+    height: 49.5%;
+    margin-left: 230px;
+    margin-top: -64.1em;
+    visibility: visible;
+}
+.barreSuite2 {
+    position: absolute;
+    border-left: 1.5px solid;
+    height: 90%;
+    margin-left: 230px;
+    margin-top: -590px;
+}
+
+
+.textP {
+    font-family: 'Montserrat', sans-serif;
+    color: rgb(194, 183, 183);
+    font-size: 1.2em;
+}
+.textP2 {
+    font-family: 'Montserrat', sans-serif;
+    color: rgb(194, 183, 183);
+    font-size: 1.2em;
+}
+
+.textcv { 
     font-family: fantasy;
     color: rgb(111, 104, 104);
 }
 
-h2 {
-    margin-left: 25%;
-    margin-top: 45px;
-    color: rgb(194, 183, 183);
-}
-
-.list {
+.bigDiv {
     display: flex;
-    flex-direction: column;
-    list-style: none;
-    margin-top: -1em;
-    margin-right: 3em;
+    margin-top: -20px;
 }
 
-.listText ol{
-    line-height: 2.2;
-    margin-top: -20.6em;
-    margin-left: 7px;
+.listInformatique ol li{
+    margin: 9.5px 2px;
+}
+
+.expPro {
+    font-family: fantasy;
+    color: rgb(111, 104, 104);
+}
+
+.informatique ol li{
+    font-family: fantasy;
+    color: rgb(111, 104, 104);
+} 
+
+.logoInfo li{
+    font-family: 'Montserrat', sans-serif;
+}
+
+
+.textEp {
+   font-family: 'Montserrat', sans-serif;
+}
+
+h2 {
+    color: rgb(194, 183, 183);
+    font-family: 'Montserrat', sans-serif;
+    font-size: 1.2em;
+    text-decoration: underline;
+}
+
+.logoMots li{
     list-style: none;
 }
+
 
 .projR {
     font-size: 5em;
 }
+
+
+
+/* media */
+
+@media screen and (max-width:1312px) {
+    .allLogo {
+        margin-left: 80%;
+    }
+} 
+
+@media screen and (max-width:1101px) {
+    .container {
+        margin-left: 20%;
+    }
+}
+
+@media screen and (max-width:1156px) {
+    .textP {
+        font-size: 120%;
+    }
+
+    .projet1 {
+       width: 100%;
+    }
+
+    .textP2 {
+        font-size: 120%;
+    }
+
+    .projet2 {
+       width: 100%;
+    }
+    .barreSuite {
+        visibility: hidden;
+    }
+    .barreSuite2 {
+        visibility: hidden;
+    }
+
+    .container {
+        margin-right: 2%;
+    }
+}
+
+@media screen and (max-width:1080px) {
+    .eP {
+        font-size: 90%;
+    }
+}
+
+@media screen and (max-width:1000px) {
+    .textIntro {
+        margin-left: 15%;
+    }
+}
+
+
+
+
+
+
+
+
+@media screen and (max-width:768px) {
+    .eP {
+        flex-direction: column;
+        align-items: center;
+        font-size: 120%;
+    }
+
+    .container {
+        margin-left: 30%;
+    }
+
+    .cardProject {
+        flex-direction: column;
+    }
+
+    /* format phone */
+
+    .textP {
+        font-size: 130%;
+    }
+
+    .projet1 {
+       width: 70%;
+    }
+
+    .textP2 {
+        font-size: 130%;
+    }
+
+    .projet2 {
+       width: 70%;
+    }
+
+    .textIntro {
+        font-size: 150%;
+    }
+
+    .carre2 {
+        margin-left: 0%;
+    }
+}
+
+@media screen and (max-width:734px) {
+    .allLogo {
+        margin-left: 75%;
+    }
+
+    .textIntro {
+        margin-left: 1%;
+    }
+
+    .textcv {
+        margin-left: 10%;
+    }
+
+    .expPro {
+        margin-left: 17%;
+    }
+    
+}
+
+@media screen and (max-width:591px) {
+   .allLogo {
+    position: relative;
+    margin-left: 70%;
+    margin-right: 14px;
+    margin-top: 8px;
+   } 
+
+   .nomPrenom {
+    font-size: 150%;
+    position: absolute;
+    margin-left: 100px;
+    margin-top: 10px;
+   }
+
+   .ageAbas {
+    font-size: 150%;
+    visibility: hidden;
+    margin-bottom: 50px;
+   }
+
+   .devWeb {
+    font-size: 110%;
+    visibility: hidden;
+   }
+
+   .mail {
+    font-size: 100%;
+    position: absolute;
+    margin-top: -183px;
+    margin-left: 100px;
+    
+   }
+
+   .projet1 {
+    width:90%;
+   }
+
+   .projet2 {
+    width:90%;
+   }
+
+   .textIntro {
+    font-size: 100%;
+    margin-top: 35px;
+    margin-bottom: 75px;
+   }
+
+   .textProjet {
+    font-size:200%;
+   }
+
+   .container {
+    margin-left: 80px;
+   }
+
+   .topInfo img {
+    height: 90px;
+    margin-top: 5px;
+    position: absolute;
+   }
+
+}
+
+@media screen and (max-width:375px) {
+    .projet1 {
+        height: 500%;
+    }
+
+    .projet2 {
+        height: 500%;
+    }
+
+    .container {
+        margin-right: 50px;
+    }
+
+    .expPro {
+        margin-right: 50px;
+    }
+
+    .email {
+        font-size: 10%;
+    }
+}
+
+
+@media screen and (max-width:999px) {
+    .container {
+        margin-right: 160px;
+    }
+
+    .projet2 {
+        margin-top: 7px;
+    }
+}
+
+@media screen and (min-width:1337px) {
+    .allLogo {
+        margin-left: 88%;
+    } 
+
+    .topInfo img {
+        height: 230px;
+    }
+
+    .nomPrenom {
+        font-size: 300%;
+    }
+
+    .ageAbas {
+        font-size: 300%;
+    }
+
+    .devWeb {
+        font-size: 120%;
+    }
+}
+
+@media screen and (min-width:1588px) {
+    .barreSuite {
+        height: 41%;
+        margin-top: -61.1rem;
+    }
+}
+
