--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -29,14 +29,13 @@ body {
 } 
 
 .textProjet {
-    font-family: 'kaushan_scriptregular', Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-family: kaushan_scriptregular, Haettenschweiler, Arial Narrow Bold, sans-serif;
     font-size: 3.5em;
     color: rgb(99, 99, 98);
 }
 
 .textIntro {
     font-size: 2.5em;
-    font-family: 'kaushan_scriptregular', Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     color: rgb(111, 104, 104);
 }
 
@@ -127,13 +126,13 @@ h3 {
 }
 
 .nomPrenom {
-    font-family: 'kaushan_scriptregular', Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-family: kaushan_scriptregular, Haettenschweiler, Arial Narrow Bold, sans-serif;
     font-size: 25px;
     color: rgb(194, 183, 183);
 }
 
 .ageAbas {
-    font-family: 'kaushan_scriptregular', Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-family: kaushan_scriptregular, Haettenschweiler, Arial Narrow Bold, sans-serif;
     font-size: 25px;
     color: rgb(194, 183, 183);
 }
@@ -145,13 +144,13 @@ a {
 }
 
 .devWeb {
-    font-family: 'kaushan_scriptregular', Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-family: kaushan_scriptregular, Haettenschweiler, Arial Narrow Bold, sans-serif;
     font-size: 25px;
     color: rgb(194, 183, 183);
 }
     
 .mail {
-    font-family: 'kaushan_scriptregular', Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-family: kaushan_scriptregular, Haettenschweiler, Arial Narrow Bold, sans-serif;
     font-size: 15px;
     color: rgb(194, 183, 183);
     text-decoration: underline;
