--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -238,6 +238,9 @@ h2 {
     list-style: none;
 }
 
+/* .allLogo {
+    position: fixed;
+} */
 
 .projR {
     font-size: 5em;
@@ -328,7 +331,6 @@ h2 {
 @media screen and (max-width:1312px) {
     .allLogo {
         margin-left: 80%;
-        z-index: 1;
     }
 
     .barreSuite {
@@ -458,7 +460,6 @@ h2 {
 @media screen and (max-width:734px) {
     .allLogo {
         margin-left: 75%;
-        z-index:1
     }
 
     .textIntro {
@@ -651,6 +652,13 @@ h2 {
 
     .informatique h2 {
         margin-left: 15%;
+    }
+
+    .LLK {
+        z-index: 2;
+    }
+    .LCV {
+        z-index: 2;
     }
 }
 
