--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -22,11 +22,11 @@ body {
 }
 
 
-.LG {
+/* .LG {
     height: 41px;
     margin-top: 3px;
     margin-left: 7px;
-}
+} */
 
 .textProjet {
     font-family: kaushan_scriptregular, Haettenschweiler, Arial Narrow Bold, sans-serif;
