--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -238,10 +238,6 @@ h2 {
     list-style: none;
 }
 
-/* .allLogo {
-    position: fixed;
-} */
-
 .projR {
     font-size: 5em;
 }
@@ -596,8 +592,12 @@ h2 {
 @media screen and (min-width:360px) and (max-width:500px) {
 
     .presentation {
-        flex-direction: row;
-        margin-top: -60px;
+        /* flex-direction: row; */
+        margin-top: -160px;
+    }
+
+    .allLogo {
+        flex-direction: column;
     }
 
     .imgAbas img {
